--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -2342,6 +2342,15 @@
     "four_with_replacement = [random.choice(range(10)) for _ in range(4)]\n",
     "print(four_with_replacement)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len()"
+   ]
   }
  ],
  "metadata": {
