--- a/3.Python_Conditional.ipynb
+++ b/3.Python_Conditional.ipynb
@@ -7,10 +7,10 @@
     "### Statement\n",
     "\n",
     "Python interpreter가 실행 가능한 문법에 옳은 문장들\n",
-    "* 1 + 2\n",
-    "* x = 7\n",
-    "* print \"Hello\"\n",
-    "* newstring = \"ABCD\".lower()\n",
+    "* ```1 + 2```\n",
+    "* ```x = 7```\n",
+    "* ```print(\"Hello\")```\n",
+    "* ```newstring = \"ABCD\".lower()```\n",
     "* 조건문\n",
     "* 반복문\n",
     "\n",
@@ -37,8 +37,8 @@
     }
    ],
    "source": [
-    "x=15\n",
-    "if (x/2)*2 == x:\n",
+    "x = 15\n",
+    "if x %% 2 == 0:\n",
     "    print('Even')\n",
     "else:\n",
     "    print('Odd')"
@@ -48,26 +48,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(x/2)*2 == x 의 연산결과가 True이면\n",
-    "* print 'Even'을 실행\n",
-    "False이면\n",
-    "* print 'Odd'을 실행"
+    "```x %% 2 == 0``` 의 연산결과가 ```True```이면\n",
+    "* ```print('Even')```을 실행\n",
+    "```False```이면\n",
+    "* ```print('Odd')```을 실행"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* if, else 문의 문법 구조\n",
+    "### ```if```, ```else``` 문의 문법 구조\n",
     "\n",
     "if < some test >:  \n",
-    "    < test 결과가 True일 경우 해야 할 일 >\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;< test 결과가 True일 경우 해야 할 일 >  \n",
     "else:  \n",
-    "    < test 결과가 False일 경우 해야 할 일>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;< test 결과가 False일 경우 해야 할 일>\n",
     "    \n",
-    "* if문과 else의 마지막에 : 이 존재하는 것을 확인\n",
-    "* 들여쓰기(indentation)를 해야 함\n",
-    "\n",
+    "* ```if```문과 ```else```의 마지막에 ```:``` 이 존재하는 것을 확인\n",
+    "* ```if```문은 test 조건절이 ```True```일 경우에 실행되는 코드 블록을 포함\n",
+    "* ```else``` 문은 ```if``` 문에있는 조건식이 ```0``` 또는 ```False``` 값으로 해석될 때 실행되는 코드 블록을 포함\n",
+    "* ```if```문과 ```else```의 내용은 들여쓰기(indentation)를 해야 함\n",
+    "* 필요가 없을 경우 ```else``` 문은 생략 가능 \n",
+    "* 하나의 ```if```에 대응되는 ```else```는 많아야 한 개\n",
     "* 코드가 간단할 경우, 줄을 바꿔 들여쓰기를 하지 않고, 다음과 같은 문법도 가능\n",
     "\n",
     "if < some test >: < test 결과가 True일 경우 해야 할 일 >  \n",
@@ -97,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* else 이 후의 내용이 필요 없을 경우 else는 생략 가능"
+    "```else``` 이 후의 내용이 필요 없을 경우 ```else```는 생략 가능"
    ]
   },
   {
@@ -140,8 +143,34 @@
     "들여쓰기 - indentation\n",
     "* C/C++이나 JAVA와 같은 언어에서는 들여쓰기는 코드를 보기 좋게 만들기 위한 것일 뿐 필수적인 것은 아님\n",
     "* Python에서는 들여쓰기가 문법의 일부이므로 반드시 지키도록 한다.\n",
-    "\n",
-    "예제"
+    "* 따라서 다음은 바로 위의 코드와는 다르게 작동한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "do a laundry\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_status = 'clean'\n",
+    "if my_status == 'dirty':\n",
+    "    print(\"take a shower\")\n",
+    "print(\"do a laundry\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "간단한 예제:"
    ]
   },
   {
@@ -184,6 +213,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### nested ```if``` statement\n",
+    "\n",
+    "* 하나의 조건을 검사한 후에, 또다른 조건을 검사해야 될 필요가 있을 수 있다.\n",
+    "* 이러한 경우 중첩된 ```if``` 구문을 사용할 수 있다.\n",
+    "* 하나의 ```if```문 혹은 ```else```문 내에 또다른 ```if```,```else``` 구문이 나타날 수 있다.\n",
+    "   * 마찬가지로 ```if```문 내에 ```if```문 내에 ```if```문이 등장할 수도 있다.\n",
     "* 최소값을 찾는 다음의 코드가 옳게 작동하는지 살펴 보자."
    ]
   },
@@ -216,7 +251,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* elif을 통한 조건 추가 "
+    "### ```elif```을 통한 조건 추가 \n",
+    "\n",
+    "```elif``` 의 문법\n",
+    "\n",
+    "if expression1:  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)  \n",
+    "elif expression2:  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)  \n",
+    "elif expression3:  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)  \n",
+    "else:  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)\n",
+    "\n",
+    "\n",
+    "* ```elif``` 문을 사용하면 여러 표현식을 검사하고, 조건 중 하나가 ```True```로 판정되는 코드 블록을 실행\n",
+    "* ```else```와 마찬가지로 ```elif``` 프로그램의 목적에 따라 생략이 될 수 있음\n",
+    "* 그러나 ```else```와는 달리, ```if``` 다음에 임의의 수의 ```elif``` 문이 있을 수 있음"
    ]
   },
   {
@@ -245,8 +296,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* if문에서 and 를 이용하여 두 조건을 동시에 넣은 것에 주의\n",
-    "* if의 조건에 해당하지 않으면 (x가 최소값이 아니라면), 두 번째 조건이 elif 뒤에 명시되는 것을 확인"
+    "* ```if```문에서 ```and``` 를 이용하여 두 조건을 동시에 넣은 것에 주의\n",
+    "* ```if```의 조건에 해당하지 않으면 (x가 최소값이 아니라면), 두 번째 조건이 ```elif``` 뒤에 명시되는 것을 확인"
    ]
   },
   {
