--- a/3.Python_Loop.ipynb
+++ b/3.Python_Loop.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "#### while\n",
     "\n",
-    "같은 코드를 while문을 이용하여 여러 번 실행할 수 있음"
+    "같은 코드를 while문을 이용하여 여러 번 실행할 수 있음  \n",
+    "while 루프 문은 주어진 조건이 참일 경우 목표 문장을 반복적으로 실행"
    ]
   },
   {
@@ -42,15 +43,16 @@
     "while < test statement >:  \n",
     "&nbsp;&nbsp;&nbsp;< test 결과가 True일 경우 해야 할 일 >\n",
     "    \n",
-    "if문과 비슷한 구조를 지님   \n",
+    "```if```문과 비슷한 구조를 지님   \n",
     "* < test statement >가 True일 경우 해야 할 일을 수행하고 다시 while문으로 돌아가 <test statement>가 참인지 체크  \n",
     "* < test statement >가 False일 경우 while문 종료  \n",
-    "\n",
+    "* ```if``` 문과 마찬가지로 들여쓰기 규칙을 잘 지켜야 한다.\n",
+    "    \n",
     "while문 내의 코드를 잘 작성하여 무한 루프(infinite loop)가 발생하지 않도록 주의\n",
     "\n",
     "#### 무한 루프의 예\n",
     "\n",
-    "j의 값에 변화가 없기 때문에 무한히 \"Hello world\"를 출력"
+    "```j```의 값에 변화가 없기 때문에 무한히 ```\"Hello world\"```를 출력  "
    ]
   },
   {
@@ -70,8 +72,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "while문 내에서 j의 값을 변화하도록 수정하여 무한루프 문제 해결\n",
-    "* j의 값이 매 loop마다 1씩 감소하며 세 번 \"Hello world\"를 출력"
+    "```while```문 내에서 ```j```의 값을 변화하도록 수정하여 무한루프 문제 해결\n",
+    "* ```j```의 값이 매 loop마다 1씩 감소하며 세 번 ```\"Hello world\"```를 출력"
    ]
   },
   {
@@ -131,8 +133,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* while문 검사에 사용하는 변수 j는 while문 바깥에서 미리 초기화\n",
-    "* while문 내에서 j의 값을 변화시키면서 무한 루프를 방지"
+    "* ```while```문 검사에 사용하는 변수 ```j```는 ```while```문 바깥에서 미리 초기화\n",
+    "* ```while```문 내에서 ```j```의 값을 변화시키면서 무한 루프를 방지"
    ]
   },
   {
@@ -201,10 +203,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### break를 통한 while 벗어나기\n",
+    "#### ```break```를 통한 ```while``` 벗어나기\n",
     "\n",
-    "break를 이용하면 현재의 loop를 벗어날 수 있음\n",
-    "* 일반적으로 if와 함께 사용되며 if의 조건이 True이면 현재 loop 종료"
+    "```break```를 이용하면 현재의 loop를 벗어날 수 있음\n",
+    "* 일반적으로 ```if```와 함께 사용되며 ```if```의 조건이 ```True```이면 현재 loop 종료"
    ]
   },
   {
@@ -233,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### while문을 통해 여러 번 입력 받기\n",
+    "#### ```while```문을 통해 여러 번 입력 받기\n",
     "\n",
     "숫자를 다섯 개 입력 받아 총 합을 출력"
    ]
@@ -270,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음 코드는 입력된 문자열을 출력하는 단순 프로그램이며 q를 입력하여 빠져나올 수 있다."
+    "다음 코드는 입력된 문자열을 출력하는 단순 프로그램이며 ```q```를 입력하여 빠져나올 수 있다."
    ]
   },
   {
@@ -302,15 +304,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### while/else\n",
+    "#### ```while/else```\n",
     "\n",
     "Python에 있는 독특한 문법    \n",
-    "while문의 반복 조건이 False일 경우 else문을 실행\n",
-    "* while문에 아예 진입하지 않았거나 정상적으로 종료될 경우 else문 실행\n",
+    "```while```문의 반복 조건이 ```False```일 경우 ```else```문을 실행\n",
+    "* ```while```문에 아예 진입하지 않았거나 정상적으로 종료될 경우 ```else```문 실행\n",
     "\n",
-    "break를 통해 while문을 강제로 빠져나오면 else문은 실행되지 않음\n",
+    "```break```를 통해 ```while```문을 강제로 빠져나오면 ```else```문은 실행되지 않음\n",
     "\n",
-    "예제 : x의 값을 바꿔가며 실험해 보자."
+    "예제 : ```x```의 값을 바꿔가며 실험해 보자."
    ]
   },
   {
@@ -495,7 +497,7 @@
     "for < variable > in < some collection >:  \n",
     "&nbsp;&nbsp;&nbsp;< something to do >\n",
     "\n",
-    "조사할 특정 범위가 있다면 for문이 while문보다 간결히 이용될 여지가 많다."
+    "조사할 특정 범위가 있다면 ```for```문이 ```while```문보다 간결히 이용될 여지가 많다."
    ]
   },
   {
@@ -584,7 +586,7 @@
    "source": [
     "#### range()의 다양한 활용\n",
     "\n",
-    "Python 2의 range()와 Python 3의 range()는 약간의 차이가 있으나 그 용법은 거의 비슷하다."
+    "Python 2의 ```range()```와 Python 3의 ```range()```는 약간의 차이가 있으나 그 용법은 거의 비슷하다."
    ]
   },
   {
@@ -867,18 +869,6 @@
     "* 다음 방정식의 모든 정수해를 찾아라. 해는 음수일 수도 있음\n",
     "  * $x^5 - x^4 - 33 x^3 + 61 x^2 + 32 x - 60 = 0$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
