--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "* Python은 기본적으로 많은 내장 함수를 제공한다.\n",
     "* 문자열 등을 다루면서 함수를 사용한 경험을 상기해 보자.\n",
-    "  * len(\"Python programming\")\n",
+    "  * ```len(\"Python programming\")```\n",
     "\n",
     "* 필요에 따라 함수를 생성하여 원하는 기능을 따로 분리하여 사용하는 법을 익혀보자.\n",
     "  * Decomposition and abstraction\n",
@@ -25,13 +25,13 @@
    "source": [
     "### 함수 정의의 규칙\n",
     "\n",
-    "* 함수 블록은 키워드 def와 함수 이름 및 괄호()로 시작한다.\n",
+    "* 함수 블록은 키워드 ```def```와 함수 이름 및 괄호```()```로 시작한다.\n",
     "\n",
     "* 모든 입력 매개 변수는 괄호 안에 있어야 한다. 이 괄호 안에 매개 변수를 정의할 수도 있다.\n",
     "\n",
-    "* 모든 함수 내의 코드 블록은 콜론(:)으로 시작되고 들여쓰기를 하여야 한다.\n",
+    "* 모든 함수 내의 코드 블록은 콜론(```:```)으로 시작되고 들여쓰기를 하여야 한다.\n",
     "\n",
-    "* return [expression] 명령문은 함수를 종료하고 호출자에게 표현식을 전달한다. \n",
+    "* ```return [expression]``` 명령문은 함수를 종료하고 호출자에게 표현식을 전달한다. \n",
     "\n",
     "\n",
     "def function_name(< argument >):   \n",
@@ -62,11 +62,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * x라는 인자(argument)를 받아서 \n",
-    " * x**2 + 1 의 계산을 수행한 후 \n",
-    " * 결과를 ans에 대입하여 반환(return)하고 있음\n",
+    " * ```x```라는 인자(argument)를 받아서 \n",
+    " * ```x**2 + 1``` 의 계산을 수행한 후 \n",
+    " * 결과를 ```ans```에 대입하여 반환(return)하고 있음\n",
     "\n",
-    " * 콘솔이나 에디터에서 square_plus_one(10) 등을 수행해 보자."
+    " * ```square_plus_one(10)``` 등을 수행해 보자."
    ]
   },
   {
@@ -222,7 +222,7 @@
    "source": [
     "* 위 함수는 아무런 인자를 받지 않을 뿐만 아니라, 아무런 반환값도 없음\n",
     "\n",
-    " * print_something() 함수를 실행해 보자. "
+    " * ```print_something()``` 함수를 실행해 보자. "
    ]
   },
   {
@@ -584,72 +584,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "def increase(x):\n",
-    "    x = x + 1\n",
-    "    \n",
-    "x=1\n",
-    "increase(x)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "def my_func():\n",
-    "    x = 20\n",
-    "    \n",
-    "x = 10\n",
-    "my_func()\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "def increase(x):\n",
-    "    x = x + 1\n",
-    "    \n",
-    "x = 1\n",
-    "increase(x)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -669,6 +603,28 @@
     "x = 10\n",
     "x = my_func()\n",
     "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def increase(x):\n",
+    "    x = x + 1\n",
+    "    \n",
+    "x=1\n",
+    "increase(x)\n",
+    "print(x)"
    ]
   },
   {
@@ -742,8 +698,8 @@
    "source": [
     "def farm(numHeads, numLegs):\n",
     "    for x in range(0, numHeads + 1):\n",
-    "         y = numHeads - x\n",
-    "         if 4*x + 2*y == numLegs:\n",
+    "        y = numHeads - x\n",
+    "        if 4*x + 2*y == numLegs:\n",
     "              return [x, y]\n"
    ]
   },
@@ -810,9 +766,9 @@
    "source": [
     "def farm(numHeads, numLegs):\n",
     "    for x in range(0, numHeads + 1):\n",
-    "         y = numHeads - x\n",
-    "         if 4*x + 2*y == numLegs:\n",
-    "              return [x, y]\n",
+    "        y = numHeads - x\n",
+    "        if 4*x + 2*y == numLegs:\n",
+    "            return [x, y]\n",
     "    return [None, None]\n",
     "\n",
     "farm(100,10)"
@@ -876,10 +832,10 @@
     "    legs = int(input('Enther the number of legs : '))\n",
     "    [pigs, chickens] = farm(heads, legs)\n",
     "    if pigs == None:\n",
-    "          print('No solution')\n",
+    "        print('No solution')\n",
     "    else:\n",
-    "          print('Number of pigs : ', pigs)\n",
-    "          print('Number of chickens : ', chickens)\n",
+    "        print('Number of pigs : ', pigs)\n",
+    "        print('Number of chickens : ', chickens)\n",
     "        \n",
     "farm_UI()"
    ]
@@ -914,14 +870,14 @@
     "\n",
     "### Math module\n",
     "\n",
-    "* import math\n",
-    "* math.sqrt(x)\n",
+    "* ```import math```\n",
+    "* ```math.sqrt(x)```\n",
     "  * x의 제곱근 반환\n",
-    "* math.exp(x)\n",
+    "* ```math.exp(x)```\n",
     "  * e**x 반환\n",
-    "* math.sin(x)\n",
+    "* ```math.sin(x)```\n",
     "  * sin 함수값 반환\n",
-    "* math.pi\n",
+    "* ```math.pi```\n",
     "  * 3.141592…"
    ]
   },
@@ -1029,14 +985,14 @@
    "source": [
     "### Random module\n",
     "\n",
-    "* import random\n",
-    "* random.random()\n",
+    "* ```import random```\n",
+    "* ```random.random()```\n",
     "  * 0이상 1이하의 랜덤값 반환\n",
-    "* random.uniform(a,b)\n",
+    "* ```random.uniform(a,b)```\n",
     "  * a이상 b이하에서 uniform 분포를 가지는 랜덤값 반환\n",
-    "* random.randint(a,b)\n",
+    "* ```random.randint(a,b)```\n",
     "  * a이상 b이하의 랜덤 정수 반환\n",
-    "* random.gauss(mu, sigma), random.normalvariate(mu, sigma)\n",
+    "* ```random.gauss(mu, sigma)```, ```random.normalvariate(mu, sigma)```\n",
     "  * 평균 mu, 표준편차 sigma의 정규 분포를 가지는 랜덤값 반환"
    ]
   },
@@ -1169,14 +1125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 모듈에 대한 여러 가지\n",
-    "\n",
-    "* 파이썬 스크립트 파일로 모듈을 만들 수 있음\n",
-    "  * 기본 작업 directory에 저장하여 import 할 수 있음\n",
-    "* 모듈 변경과 갱신\n",
-    "  * 혹시 모듈을 변경하였다면 reload 명령을 이용하여 갱신\n",
-    "   * reload(fibo)\n",
-    "* 모듈 파일을 불러오는 다양한 방법"
+    "#### 모듈 파일을 불러오는 다양한 방법"
    ]
   },
   {
@@ -1240,6 +1189,19 @@
    "source": [
     "import random as r   \n",
     "r.randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 모듈에 대한 여러 가지\n",
+    "\n",
+    "* 파이썬 스크립트 파일로 모듈을 만들 수 있음\n",
+    "  * 기본 작업 directory에 저장하여 import 할 수 있음\n",
+    "* 모듈 변경과 갱신\n",
+    "  * 혹시 모듈을 변경하였다면 reload 명령을 이용하여 갱신\n",
+    "   * reload(fibo)"
    ]
   }
  ],
