--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -2063,92 +2063,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generator and Iterator\n",
+    "### Generator \n",
     "\n",
     "* List의 문제 중 하나는 그 길이가 매우 커질 수 있다는 점.\n",
-    "* 예를 들어 Python2에서 range(1000000)은 백만 개의 원소를 가짐.\n",
-    "* 때로는 이 데이터를 모두 생성하는 것은 낭비일 수 있음.\n",
-    "* generator는 for문 등을 이용하여 반복 가능하지만, 그 값들을 생성하는 것은 필요한 경우만 실행.\n",
-    "* yield를 이용하여 generator를 만드는 방법"
+    "* 예를 들어 Python2에서 ```range(1000000)```은 백만 개의 원소를 가지는 list.\n",
+    "* 때로는 단순히 for문을 돌리기 위해 이 데이터를 모두 생성하여 메모리에 저장하는 것은 낭비일 수 있음.\n",
+    "* 반면 Python3에서는 ```range(1000000)```가 generator의 형태로 바뀜.\n",
+    "* generator는 ```for```문 등을 이용하여 반복 가능하지만, 그 값들을 생성하는 것은 필요한 경우만 실행.\n",
+    "* Python2에서는 generator 역할을 하는 ```xrange```라 불리우는 함수가 있으며, \n",
+    "  * Python 3에서는 ```range``` 자체가 ```generator```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'range' and 'range'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-28dc29cb5f5d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# generator를 list처럼 합치면 예상치 못한 결과가 나올 수 있음\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'range' and 'range'"
+     ]
+    }
+   ],
    "source": [
-    "def lazy_range(n):\n",
-    "    i = 0\n",
-    "    while i<n:\n",
-    "        yield i\n",
-    "        i += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### generator"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "for i in lazy_range(10):   \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;do_something_with(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Python은 실제로 위와 비슷한 xrange라 불리우는 함수가 있으며, \n",
-    "  * Python 3에서는 range 자체가 generator를 반환.\n",
-    "* 다음 세가지는 같은 역할을 함, \n",
-    "  * for i in range(n):\n",
-    "  * for i in lazy_range(n):\n",
-    "  * for i in xrange(n):\n",
-    "\n",
-    "* .next()를 이용하여 반복되는 값을 확인\n",
-    "  * x = lazy_range(10)\u000b",
-    "x.next()\u000b",
-    "x.next()\u000b",
-    "x.next()\n",
-    "  \n",
-    "### generator(2)\n",
-    "\n",
-    "* 무한 시퀀스를 만들 수도 있다."
+    "# generator를 list처럼 합치면 예상치 못한 결과가 나올 수 있음\n",
+    "for i in range(3) + range(4,6): print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "def natural_numbers():\n",
-    "    n = 1\n",
-    "    while True:\n",
-    "        yield n\n",
-    "        n += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* for를 이용한 generator 생성"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lazy_evens_below_20 = (i for i in lazy_range(20) if i%2==0)"
+    "# list로 변환하여 해결하는 방안이 있음\n",
+    "for i in list(range(3)) + list(range(3,6)): print(i)"
    ]
   },
   {
